<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    >


    <item
        android:id="@+id/menu_lowerCase"
        android:title="@string/lowercase_letters"
        android:icon="@drawable/ic_checkmark"
        android:iconTint="?attr/colorOnPrimary"
        app:showAsAction="always"
        android:orderInCategory="1"/>

    <item
        android:id="@+id/menu_UpperCase"
        android:title="@string/uppercase_letters"
        android:icon="@drawable/ic_checkmark"
        android:iconTint="?attr/colorOnPrimary"
        app:showAsAction="always"
        android:orderInCategory="2"/>

    <item
        android:id="@+id/menu_Digits"
        android:title="@string/digits"
        android:icon="@drawable/ic_checkmark"
        android:iconTint="?attr/colorOnPrimary"
        app:showAsAction="always"
        android:orderInCategory="3"/>



    <item
        android:id="@+id/menu_SpecialCharacter"
        android:title="@string/special_characters"
        android:icon="@drawable/ic_checkmark"
        android:iconTint="?attr/colorOnPrimary"
        app:showAsAction="always"
        android:orderInCategory="4"/>


</menu>