<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_miscellaneous"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/margin_small"
    android:background="@color/background"
    android:padding="@dimen/padding_large"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/filter_notes"
        android:textColor="@color/color_on_highlight"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.button.MaterialButton
     android:id="@+id/clear_data"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/poppins"
        android:text="@string/clear_filter"
        android:padding="2dp"

        app:layout_constraintBottom_toBottomOf="@id/tv_title"
        android:textAllCaps="false"
        android:textColor="@color/GREEN"
        android:textSize="18sp"
        android:textStyle="bold"
app:layout_constraintEnd_toEndOf="parent"

        />

    <CheckBox
        android:id="@+id/favorite"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_small"
        android:buttonTint="@color/colorPrimary"
        android:text="@string/favorites"
        android:textColor="?attr/colorSecondaryVariant"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sub_group_priority"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/favorite"
        app:layout_constraintTop_toBottomOf="@id/favorite">


        <CheckBox
            android:id="@+id/priority_red"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginVertical="@dimen/margin_small"
            android:buttonTint="@color/colorPrimary"
            android:text="@string/priority_red"
            android:textColor="?attr/colorSecondaryVariant"
            android:textSize="18sp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <CheckBox

            android:id="@+id/priority_yellow"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginVertical="@dimen/margin_small"
            android:buttonTint="@color/colorPrimary"
            android:text="@string/priority_yellow"
            android:textColor="?attr/colorSecondaryVariant"
            android:textSize="18sp"

            app:layout_constraintStart_toStartOf="@id/priority_red"
            app:layout_constraintTop_toBottomOf="@id/priority_red" />



        <CheckBox
            android:id="@+id/priority_green"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginVertical="@dimen/margin_small"
            android:buttonTint="@color/colorPrimary"
            android:text="@string/priority_green"
            android:textColor="?attr/colorSecondaryVariant"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@id/priority_yellow"
            app:layout_constraintTop_toBottomOf="@id/priority_yellow" />


        <ImageView
            android:id="@+id/green"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/priority_green"
            android:scaleType="center"
            app:layout_constraintBottom_toBottomOf="@id/priority_green"
            app:layout_constraintEnd_toEndOf="@id/red"
            app:layout_constraintStart_toStartOf="@id/red"
            app:layout_constraintTop_toTopOf="@id/priority_green"
            android:contentDescription="@string/app_name" />



        <ImageView
            android:id="@+id/yellow"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/priority_yellow"
            android:scaleType="center"
            app:layout_constraintBottom_toBottomOf="@id/priority_yellow"
            app:layout_constraintEnd_toEndOf="@id/red"
            app:layout_constraintStart_toStartOf="@id/red"
            app:layout_constraintTop_toTopOf="@id/priority_yellow"

            android:contentDescription="@string/app_name" />


        <ImageView
            android:id="@+id/red"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/priority_red"
            android:scaleType="center"
            app:layout_constraintBottom_toBottomOf="@id/priority_red"
            app:layout_constraintStart_toEndOf="@id/priority_red"
            app:layout_constraintTop_toTopOf="@id/priority_red"
            android:contentDescription="@string/app_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/done"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/poppins"
        android:text="@string/done"
        android:textAllCaps="false"
        android:textColor="@color/GREEN"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sub_group_priority" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/poppins"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/RED"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/done"
        app:layout_constraintTop_toBottomOf="@id/sub_group_priority"

        />


</androidx.constraintlayout.widget.ConstraintLayout>